--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ h6 {
   margin: 0;
 }
 
+input {
+  padding: 0;
+  margin: 0;
+}
+
 ul {
   margin: 0;
   padding-left: 0;
@@ -435,6 +440,10 @@ p {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.invite {
+  margin-right: 93px;
+}
+
 .invite-title {
   font-style: normal;
   font-size: 14px;
@@ -683,7 +692,7 @@ p {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 8px;
+  padding: 40px;
   position: relative;
 }
 
@@ -706,4 +715,112 @@ p {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+.subscribe-title {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  margin-top: 12px;
+  margin-bottom: 20px;
+
+  color: var(--white-color);
+}
+
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding-left: 16px;
+  background-color: var(--secondary-background);
+  margin-right: 12px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  outline: none;
+}
+
+.subscribe-input:focus {
+  border-color: var(--secondary-background);
+}
+
+.subscribe-form {
+  position: relative;
+}
+
+.submit-btn {
+  width: 200px;
+  height: 50px;
+  background: var(--active-text);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin-left: 370px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+}
+
+.subscribe-icon {
+  margin-left: 10px;
+}
+
+.modal-title {
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+
+  color: var(--secondary-text);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  outline: none;
+  padding-left: 42px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  display: block;
+  height: 58px;
+  position: relative;
+  margin-bottom: 10px;
+
+  color: var(--main-text);
+}
+
+.modal-input-icon {
+  position: absolute;
+  bottom: 11px;
+  left: 12px;
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  resize: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-top: 4px;
+  padding: 12px;
+  outline: none;
+}
+
+.modal-input:placeholder-shown {
+  border-color: var(--active-text);
 }
