--- a/css/styles.css
+++ b/css/styles.css
@@ -709,6 +709,12 @@ p {
   position: absolute;
   right: 8px;
   top: 8px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  fill: var(--active-text);
 }
 
 .is-hidden {
@@ -786,8 +792,8 @@ p {
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-top: 4px;
   outline: none;
+  margin-top: 4px;
   padding-left: 42px;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -800,6 +806,16 @@ p {
   height: 58px;
   position: relative;
   margin-bottom: 10px;
+
+  color: var(--main-text);
+}
+
+.modal-label-text {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  display: block;
+  margin-bottom: 20px;
 
   color: var(--main-text);
 }
@@ -821,6 +837,80 @@ p {
   outline: none;
 }
 
-.modal-input:placeholder-shown {
-  border-color: var(--active-text);
+.modal-input:hover {
+  cursor: pointer;
+}
+
+.modal-textarea:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+.modal-input:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+
+.modal-input-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-input-icon {
+  fill: var(--active-text);
+}
+
+.modal-label-property {
+  display: flex;
+  align-items: center;
+  justify-content: right;
+  margin-right: 11px;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: var(--main-text);
+  position: relative;
+  margin-bottom: 30px;
+  user-select: none;
+}
+
+.modal-property {
+  -webkit-appearance: none;
+}
+
+.modal-label-link {
+  color: var(--active-text);
+  text-decoration: underline;
+  display: block;
+  margin-left: 5px;
+}
+
+.checkbox-property {
+  position: absolute;
+  top: 50%;
+  left: 14px;
+  width: 16px;
+  height: 15px;
+  background-image: url(/images/off.svg);
+  transform: translateY(-50%);
+}
+
+.modal-property:checked + .checkbox-property {
+  background-image: url(/images/on.svg);
+}
+
+.modal-btn {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  background-color: var(--active-text);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
+  color: var(--white-color);
+  cursor: pointer;
 }
