--- a/css/styles.css
+++ b/css/styles.css
@@ -890,12 +890,12 @@ p {
   left: 14px;
   width: 16px;
   height: 15px;
-  background-image: url(./images/off.svg);
+  background-image: url(../images/off.svg);
   transform: translateY(-50%);
 }
 
 .modal-property:checked + .checkbox-property {
-  background-image: url(./images/on.svg);
+  background-image: url(../images/on.svg);
 }
 
 .modal-btn {
